--- a/lab2/styles.css
+++ b/lab2/styles.css
@@ -15,14 +15,14 @@
     width: auto;
     height: 80vh;
     margin: 50px;
-    border: 2px solid green;
+    /* border: 2px solid green; */
 }
 
 .form {
     display: flex;
     align-items: center;
     flex-direction: column;
-    border: 2px solid green;
+    /* border: 2px solid green; */
     height: 100%;
     width: 35%;
 }
@@ -114,7 +114,7 @@ form {
     display: flex;
     align-items: center;
     flex-direction: column;
-    border: 2px solid green;
+    /* border: 2px solid green; */
     height: 100%;
     width: 20%;
 }
@@ -133,4 +133,41 @@ form {
 
 .data-container .raw {
     margin-bottom: 10px;
+}
+
+.table {
+    width: 45%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-left: 5px solid black;
+}
+
+table {
+    border-collapse: collapse;
+    width: 500px;
+    height: 500px;
+    margin: 0 auto;
+}
+
+td {
+    border: 2px solid #000;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+.color-picker-container {
+    width: 500px;
+    height: 40px;
+    margin-bottom: 40px;
+}
+
+#colorPicker {
+    width: 100%;
+    height: 100%;
 }
