--- a/lab5/client/src/components/login.css
+++ b/lab5/client/src/components/login.css
@@ -25,6 +25,7 @@
   max-width: 400px;
   background: #fff;
   padding: 30px;
+  max-height: 500px;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -33,6 +34,8 @@
   border: 5px solid #2e8b57;
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
   z-index: 5;
+  transition: max-height 1s ease-out;
+  transition-property: 'height';
 }
 .loginform .title-text {
   display: flex;
